# timeline-kit

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
src/: lib.rs
src/chrono/: formats.rs  mod.rs  timecode.rs
src/edl/: mod.rs  protools_edl.rs
src/edl/protools/: mod.rs  parser.rs  parser_traits.rs  parser_types.rs  session.rs  session_types.rs
src/format/: audio_format.rs  mod.rs  video_format.rs
