[package]
name = "timeline-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
num-traits = "0.2.15"
thiserror = "1.0.40"
